# autooss-factory

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: AGENT_RUNBOOK.md  AUTOMATION.md
scripts/: daily_loop.sh  fleet_operator.sh  install_automation.sh  nightly_content.sh
src/autooss/: __init__.py  cli.py  config.py  models.py
src/autooss/content/: __init__.py  blogger.py
src/autooss/discovery/: __init__.py  collect.py
src/autooss/fleet/: __init__.py  catalog.py  operator.py
src/autooss/github_ops/: __init__.py  push.py
src/autooss/pipeline/: daily.py  full_cycle.py
src/autooss/scaffold/: __init__.py  generator.py
src/autooss/scoring/: __init__.py  opportunities.py
tests/: test_content.py  test_fleet.py  test_scoring.py
